--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "sonner": "^2.0.7",
     "styled-components": "^6.3.8",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
