--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@sanity/client": "^7.14.0",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
+    "@sanity/sdk-react": "^2.6.0",
     "@sanity/vision": "^4.22.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -52,6 +53,7 @@
     "react-resizable-panels": "^4.4.1",
     "sanity": "^4.22.0",
     "sonner": "^2.0.7",
+    "stripe": "^20.2.0",
     "styled-components": "^6.3.8",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5",
