--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typegen": "sanity schema extract && sanity typegen generate --enforce-required-fields"
   },
   "dependencies": {
+    "@ai-sdk/openai": "3.0.0-beta.112",
+    "@ai-sdk/react": "3.0.0-beta.172",
     "@clerk/nextjs": "^6.36.9",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -36,6 +38,7 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/sdk-react": "^2.6.0",
     "@sanity/vision": "^4.22.0",
+    "ai": "6.0.0-beta.169",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -50,6 +53,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^4.4.1",
     "sanity": "^4.22.0",
     "sonner": "^2.0.7",
@@ -66,6 +70,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
